Now correctly aligned stuff for display. Just need to fill correctly each part

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -20,7 +20,6 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -67,6 +66,11 @@ a:hover {
     font-size:72px;
 }
 
+#maintable {
+    border-left-width: 5px;
+    border-right-width: 20px;
+}
+
 header {
   padding-top: 40px;
   padding-bottom: 40px;
@@ -106,13 +110,17 @@ header h2 {
 
 #main-content {
   width: 690px;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  min-height: 504px;
 }
 
 #main-content img {
   max-width: 100%;
 }
 
-aside#sidebar {
+.cmxsidebar {
   width: 200px;
   padding-left: 20px;
   min-height: 504px;
@@ -122,19 +130,19 @@ aside#sidebar {
   line-height: 1.3;
 }
 
-aside#menu {
+.menu {
+    vertical-align: top;
     width: 200px;
     padding-left: 20px;
     padding-top: 20px;
     min-height: 504px;
-    float: left;
     background: transparent url(../images/sidebar-bg-small.jpg) 0 0 no-repeat;
     font-size: 12px;
     line-height: 1.3;
 }
 
-aside#sidebar p.repo-owner,
-aside#sidebar p.repo-owner a {
+.cmxsidebar p.repo-owner,
+.cmxsidebar p.repo-owner a {
   font-weight: bold;
 }
 
@@ -162,7 +170,7 @@ header a.button {
   top: 0;
   background: transparent url(../images/github-button.png) 0 0 no-repeat;
 }
-aside a.button {
+.cmxsidebar a.button {
   width: 138px;
   padding-left: 64px;
   display: block;
@@ -170,15 +178,15 @@ aside a.button {
   font-size: 21px;
 }
 
-aside a.download {
+.cmxsidebar a.download {
   background: transparent url(../images/download-button.png) 0 0 no-repeat;
 }
 
-aside a.issue {
+.cmxsidebar a.issue {
   background: transparent url(../images/bug-button.png) 0 0 no-repeat;
 }
 
-aside a.simple-button {
+.cmxsidebar a.simple-button {
   background: transparent url(../images/empty-button.jpg) 0 0 no-repeat;
   padding-left: 0px;
   width:202px;
